[project]
name = "LORE_sa"
version = "1.1.0"
requires-python = ">=3.11"
description = "LOREM explainer package"
readme = "README.md"
dynamic = ["dependencies"]

[project.optional-dependencies]
images = ["keras", "tensorflow"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
#packages = ["lore_sa"]
packages = {find = {where = ["."],  include = ["lore_sa*"], exclude = ["tests*", "docs*", "test*"]}}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

