[project]
name = "LORE_sa"
version = "1.1.3"
requires-python = ">=3.9"
description = "LOREM explainer package"
readme = "README.md"
dynamic = ["dependencies"]

[project.optional-dependencies]
images = ["keras", "tensorflow"]
docs = ["sphinx~=5.0", "sphinx_rtd_theme~=1.2.0", "furo", "sphinx_material"]
optional = ["imblearn", "category_encoders"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
#packages = ["lore_sa"]
packages = {find = {where = ["."],  include = ["lore_sa*"], exclude = ["tests*", "docs*", "test*"]}}

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

